increased font size

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </nav>
     </header>
 
-    <main class="md:flex-row flex flex-col md:space-x-24 items-center space-y-6 md:space-y-0 mt-12">
+    <main class="md:flex-row flex flex-col md:space-x-24 items-center space-y-6 md:space-y-0 mt-12 justify-center">
         <div class="space-y-6 md:w-1/2">
             <div>
                 <picture>
@@ -76,10 +76,10 @@
             </ul>
         </div>
 
-        <div class="space-y-6 md:w-1/2">
+        <div class="space-y-6 md:w-1/2 pb-24">
             <div class="">
-                <p class="uppercase text-yellow-500 font-bold">Sneaker company</p>
-                <div class="hd text-xl font-bold">Fall Limited Edition Sneakers</div>
+                <p class="uppercase font-xl text-yellow-500 font-bold">Sneaker company</p>
+                <div class="hd text-5xl font-bold">Fall Limited Edition Sneakers</div>
             </div>
             <div class="">
                 <p>These low-profiles sneakers are perfect casual wear companion. Featuring a durable rubber oter sole.
@@ -97,14 +97,14 @@
                     -
                     <span class="md:mx-6 mx-24 text-black font-bold text-xl">0</span> + </button>
                 <button
-                    class="flex w-full  py-2 bg-red-400 text-white font-bold rounded-md items-center gap-8 justify-center">
+                    class="flex w-full  py-2 bg-red-400 text-white font-bold rounded-md items-center gap-8 justify-center uppercase">
                     <img class="pr-6" src="images\icons8-shopping-cart-30.png" alt="">
                     Add to cart</button>
             </div>
         </div>
     </main>
 
-    <footer class="text-center py-6 font-bold">Made With Love 3 By 42 Rajeev</footer>
+    <footer class="text-center py-6 font-bold">Made With ❤️ By 42 Rajeev</footer>
     <div class="attribution text-center py-4">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Rajeev Ranjan Kumar</a>.
